--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,7 +5,7 @@
 	  xmlns:f="http://xmlns.jcp.org/jsf/core"
 	  xmlns:h="http://xmlns.jcp.org/jsf/html">
 
-<ui:define name="titulo">Página Modelo</ui:define>
+<ui:define name="titulo">Sistema de Gerenciamento Automotivo</ui:define>
 
 <ui:define name="corpo">
 	Index
