--- a/src/main/webapp/veiculoList.xhtml
+++ b/src/main/webapp/veiculoList.xhtml
@@ -1,14 +1,63 @@
 <!DOCTYPE html>
 <ui:composition template="/WEB-INF/template/layout.xhtml"
-	  xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	  xmlns:f="http://xmlns.jcp.org/jsf/core"
-	  xmlns:h="http://xmlns.jcp.org/jsf/html">
+	xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:jsf="http://xmlns.jcp.org/jsf"
+	xmlns:pt="http://java.sun.com/jsf/passthrough"
+	xmlns:h="http://xmlns.jcp.org/jsf/html">
 
-<ui:define name="titulo">Página Modelo</ui:define>
+<ui:define name="titulo">Veículos no Estoque</ui:define>
 
 <ui:define name="corpo">
-	Pagina de Modelo
+	<f:metadata>
+			<f:viewAction action="#{veiculoList.consultar}" />
+		</f:metadata>
+		<h1>Lista de Veículos</h1>
+		<h:form id="frmBusca" role="form">
+			<p:messages />
+		<div class="row clearfix">
+		<div class="col-md-6 column">
+			
+				<div class="form-group">
+					 <label for="nome">Nome:</label><input jsf:value="#{veiculoList.nome}" type="text" class="form-control" id="nome" />
+				</div>
+			
+		</div>
+		<div class="col-md-6 column">
+			<br />
+			 <h:commandButton value="Buscar" action="#{veiculoList.consultarPorNome}" pt:class="btn btn-default"/>
+		</div>
+	</div>
+		</h:form>
+		
+		<h:form id="frm" class="form-horizontal" role="form">
+			<p:dataTable id="dtVeiculos" var="veiculo" rows="10" paginator="true"
+				value="#{veiculoList.veiculos}">
+				<p:column headerText="Id">
+					<h:outputText value="#{veiculo.id}" />
+				</p:column>
+				<p:column headerText="Nome">
+					<p:link outcome="/veiculo" value="#{veiculo.nome}">
+						<f:param name="id" value="#{veiculo.id}"/>
+					</p:link>
+				</p:column>
+				<p:column headerText="Renavan">
+					<h:outputText value="#{veiculo.renavan}" />
+				</p:column>
+				<p:column headerText="Marca">
+					<h:outputText value="#{veiculo.marca}" />
+				</p:column>
+				<p:column>
+					<p:commandButton icon="ui-icon-trash" title="Excluir" action="#{veiculoList.excluir}" ajax="false">
+						<f:setPropertyActionListener value="#{veiculo}" target="#{veiculoList.veiculo}" />
+					</p:commandButton>
+				</p:column>
+			</p:dataTable>
+			<br />
+			<h:commandButton value="Novo" action="veiculo?faces-redirect=true" pt:class="btn btn-default"/>
+		</h:form>
 </ui:define>
 
 </ui:composition>
